fixed vector size typo

--- a/Pitch Project/MLBGame.ipynb
+++ b/Pitch Project/MLBGame.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -137,21 +137,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "error with game: 2016_03_22_tbamlb_cubint_1\n",
       "error with game: 2016_03_22_anamlb_slcaaa_1\n",
+      "error with game: 2016_03_22_tbamlb_cubint_1\n",
       "error with game: 2016_03_31_phimlb_pfsmin_1\n",
       "error with game: 2016_03_31_sdnmlb_elpaaa_1\n",
       "error with game: 2016_04_02_detmlb_atlmlb_1\n",
       "error with game: 2016_04_02_milmlb_blxaax_1\n",
-      "error with game: 2016_04_04_houmlb_nyamlb_1\n",
       "error with game: 2016_04_04_bosmlb_clemlb_1\n",
+      "error with game: 2016_04_04_houmlb_nyamlb_1\n",
       "error with game: 2016_04_09_miamlb_wasmlb_1\n",
       "error with game: 2016_04_10_nyamlb_detmlb_1\n",
       "error with game: 2016_04_17_balmlb_texmlb_1\n",
@@ -162,190 +162,19 @@
       "error with game: 2016_05_26_chamlb_kcamlb_1\n",
       "error with game: 2016_06_08_clemlb_seamlb_1\n",
       "error with game: 2016_09_25_atlmlb_miamlb_1\n",
-      "error with game: 2016_10_03_clemlb_detmlb_1\n",
-      "error with game: 2015_03_04_sdnmlb_seamlb_1\n",
-      "error with game: 2015_03_06_sfnmlb_texmlb_1\n",
-      "error with game: 2015_03_07_arimlb_seamlb_1\n",
-      "error with game: 2015_03_07_cinmlb_kcamlb_1\n",
-      "error with game: 2015_03_08_clemlb_texmlb_1\n",
-      "error with game: 2015_03_08_colmlb_sdnmlb_1\n",
-      "error with game: 2015_03_09_clemlb_seamlb_1\n",
-      "error with game: 2015_03_09_oakmlb_texmlb_1\n",
-      "error with game: 2015_03_09_cinmlb_colmlb_1\n",
-      "error with game: 2015_03_10_chamlb_kcamlb_1\n",
-      "error with game: 2015_03_11_sdnmlb_kcamlb_1\n",
-      "error with game: 2015_03_13_chamlb_colmlb_1\n",
-      "error with game: 2015_03_14_texmlb_sdnmlb_1\n",
-      "error with game: 2015_03_14_seamlb_arimlb_1\n",
-      "error with game: 2015_03_15_lanmlb_seamlb_1\n",
-      "error with game: 2015_03_15_milmlb_texmlb_1\n",
-      "error with game: 2015_03_15_kcamlb_colmlb_1\n",
-      "error with game: 2015_03_16_clemlb_kcamlb_1\n",
-      "error with game: 2015_03_17_lanmlb_texmlb_1\n",
-      "error with game: 2015_03_17_milmlb_sdnmlb_1\n",
-      "error with game: 2015_03_17_anamlb_colmlb_1\n",
-      "error with game: 2015_03_18_milmlb_kcamlb_1\n",
-      "error with game: 2015_03_18_sdnmlb_colmlb_1\n",
-      "error with game: 2015_03_20_seamlb_texmlb_1\n",
-      "error with game: 2015_03_20_oakmlb_colmlb_1\n",
-      "error with game: 2015_03_21_arimlb_sdnmlb_1\n",
-      "error with game: 2015_03_21_lanmlb_colmlb_1\n",
-      "error with game: 2015_03_22_sfnmlb_kcamlb_1\n",
-      "error with game: 2015_03_22_texmlb_seamlb_1\n",
-      "error with game: 2015_03_23_slnmlb_bosmlb_1\n",
-      "error with game: 2015_03_23_chamlb_sdnmlb_1\n",
-      "error with game: 2015_03_23_cinmlb_texmlb_1\n",
-      "error with game: 2015_03_25_sfnmlb_colmlb_1\n",
-      "error with game: 2015_03_25_chnmlb_seamlb_1\n",
-      "error with game: 2015_03_26_kcamlb_seamlb_1\n",
-      "error with game: 2015_03_26_colmlb_texmlb_1\n",
-      "error with game: 2015_03_27_seamlb_kcamlb_1\n",
-      "error with game: 2015_03_28_sdnmlb_texmlb_1\n",
-      "error with game: 2015_03_30_kcamlb_texmlb_1\n",
-      "error with game: 2015_03_31_kcamlb_sdnmlb_1\n",
-      "error with game: 2015_04_01_lanmlb_kcamlb_1\n",
-      "error with game: 2015_04_01_chamlb_seamlb_1\n",
-      "error with game: 2015_04_02_milmlb_sdnmlb_1\n",
-      "error with game: 2015_04_02_chamlb_arimlb_1\n",
-      "error with game: 2015_04_02_houmlb_coraax_1\n",
-      "error with game: 2015_04_02_lanmlb_anamlb_1\n",
-      "error with game: 2015_04_03_miamlb_gboafx_1\n",
-      "error with game: 2015_04_03_chamlb_chraaa_1\n",
-      "error with game: 2015_04_03_slnmlb_mrbaaa_1\n",
-      "error with game: 2015_04_03_kcamlb_houmlb_1\n",
-      "error with game: 2015_04_03_nynmlb_texmlb_1\n",
-      "error with game: 2015_04_03_oakmlb_sfnmlb_1\n",
-      "error with game: 2015_04_04_nyamlb_wasmlb_1\n",
-      "error with game: 2015_04_04_pitmlb_phimlb_1\n",
-      "error with game: 2015_04_04_miamlb_jaxaax_1\n",
-      "error with game: 2015_04_04_nynmlb_texmlb_1\n",
-      "error with game: 2015_04_04_chnmlb_arimlb_1\n",
-      "error with game: 2015_04_07_slnmlb_chnmlb_1\n",
-      "error with game: 2015_04_18_chamlb_detmlb_1\n",
-      "error with game: 2015_04_23_kcamlb_chamlb_1\n",
-      "error with game: 2015_04_25_kcamlb_chamlb_1\n",
-      "error with game: 2015_04_26_sfnmlb_colmlb_1\n",
-      "error with game: 2015_04_28_chamlb_balmlb_1\n",
-      "error with game: 2015_05_03_oakmlb_texmlb_1\n",
-      "error with game: 2015_05_12_slnmlb_clemlb_1\n",
-      "error with game: 2015_05_30_kcamlb_chnmlb_1\n",
-      "error with game: 2015_06_01_minmlb_bosmlb_1\n",
-      "error with game: 2015_06_05_houmlb_tormlb_1\n",
-      "error with game: 2015_06_10_houmlb_chamlb_1\n",
-      "error with game: 2015_06_26_chamlb_detmlb_1\n",
-      "error with game: 2015_06_26_cinmlb_nynmlb_1\n",
-      "error with game: 2015_06_26_chnmlb_slnmlb_1\n",
-      "error with game: 2015_06_27_chamlb_detmlb_1\n",
-      "error with game: 2015_06_27_clemlb_balmlb_1\n",
-      "error with game: 2015_09_12_detmlb_clemlb_1\n",
-      "error with game: 2015_09_24_nynmlb_cinmlb_1\n",
-      "error with game: 2015_09_29_slnmlb_pitmlb_1\n",
-      "error with game: 2015_10_02_miamlb_phimlb_1\n",
-      "error with game: 2015_10_02_nyamlb_balmlb_1\n",
-      "error with game: 2015_10_02_wasmlb_nynmlb_1\n",
-      "error with game: 2014_02_27_texmlb_kcamlb_1\n",
-      "error with game: 2014_02_28_seamlb_sdnmlb_1\n",
-      "error with game: 2014_03_01_clemlb_chamlb_1\n",
-      "error with game: 2014_03_01_anamlb_seamlb_1\n",
-      "error with game: 2014_03_01_sdnmlb_kcamlb_1\n",
-      "error with game: 2014_03_01_chnmlb_arimlb_1\n",
-      "error with game: 2014_03_02_chamlb_texmlb_1\n",
-      "error with game: 2014_03_02_cinmlb_sdnmlb_1\n",
-      "error with game: 2014_03_03_clemlb_texmlb_1\n",
-      "error with game: 2014_03_03_colmlb_seamlb_1\n",
-      "error with game: 2014_03_04_arimlb_sdnmlb_1\n",
-      "error with game: 2014_03_04_cinmlb_kcamlb_1\n",
-      "error with game: 2014_03_05_clemlb_seamlb_1\n",
-      "error with game: 2014_03_05_colmlb_texmlb_1\n",
-      "error with game: 2014_03_06_tbamlb_balmlb_1\n",
-      "error with game: 2014_03_06_tormlb_pitmlb_1\n",
-      "error with game: 2014_03_06_chamlb_kcamlb_1\n",
-      "error with game: 2014_03_07_cinmlb_seamlb_1\n",
-      "error with game: 2014_03_07_sfnmlb_kcamlb_1\n",
-      "error with game: 2014_03_08_lanmlb_texmlb_1\n",
-      "error with game: 2014_03_09_colmlb_kcamlb_1\n",
-      "error with game: 2014_03_09_texmlb_seamlb_1\n",
-      "error with game: 2014_03_10_kcamlb_seamlb_1\n",
-      "error with game: 2014_03_11_lanmlb_kcamlb_1\n",
-      "error with game: 2014_03_11_oakmlb_sdnmlb_1\n",
-      "error with game: 2014_03_12_chnmlb_seamlb_1\n",
-      "error with game: 2014_03_14_anamlb_sdnmlb_1\n",
-      "error with game: 2014_03_14_oakmlb_kcamlb_1\n",
-      "error with game: 2014_03_15_sfnmlb_seamlb_1\n",
-      "error with game: 2014_03_16_kcamlb_sdnmlb_1\n",
-      "error with game: 2014_03_17_colmlb_sdnmlb_1\n",
-      "error with game: 2014_03_17_minmlb_balmlb_1\n",
-      "error with game: 2014_03_17_texmlb_kcamlb_1\n",
-      "error with game: 2014_03_18_sdnmlb_seamlb_1\n",
-      "error with game: 2014_03_19_milmlb_seamlb_1\n",
-      "error with game: 2014_03_20_lanmlb_ausint_1\n",
-      "error with game: 2014_03_20_anamlb_kcamlb_1\n",
-      "error with game: 2014_03_21_arimlb_ausint_1\n",
-      "error with game: 2014_03_21_sdnmlb_seamlb_1\n",
-      "error with game: 2014_03_22_chamlb_sdnmlb_1\n",
-      "error with game: 2014_03_23_sdnmlb_texmlb_1\n",
-      "error with game: 2014_03_25_seamlb_kcamlb_1\n",
-      "error with game: 2014_03_25_chnmlb_sdnmlb_1\n",
-      "error with game: 2014_03_26_kcamlb_sdnmlb_1\n",
-      "error with game: 2014_03_27_quiaaa_texmlb_1\n",
-      "error with game: 2014_03_28_chamlb_biraax_1\n",
-      "error with game: 2014_03_28_cinmlb_penaax_1\n",
-      "error with game: 2014_03_28_pitmlb_phimlb_1\n",
-      "error with game: 2014_03_28_slnmlb_mrbaaa_1\n",
-      "error with game: 2014_03_28_colmlb_seamlb_1\n",
-      "error with game: 2014_03_28_anamlb_lanmlb_1\n",
-      "error with game: 2014_03_29_pitmlb_phimlb_1\n",
-      "error with game: 2014_03_29_kcamlb_milmlb_1\n",
-      "error with game: 2014_03_29_balmlb_noraaa_1\n",
-      "error with game: 2014_03_29_tbamlb_monaax_1\n",
-      "error with game: 2014_03_29_cinmlb_louaaa_1\n",
-      "error with game: 2014_03_29_chnmlb_arimlb_1\n",
-      "error with game: 2014_03_30_vraaaa_houmlb_1\n",
-      "error with game: 2014_04_07_milmlb_phimlb_1\n",
-      "error with game: 2014_04_07_sdnmlb_clemlb_1\n",
-      "error with game: 2014_04_13_houmlb_texmlb_1\n",
-      "error with game: 2014_04_15_chnmlb_nyamlb_1\n",
-      "error with game: 2014_04_15_clemlb_detmlb_1\n",
-      "error with game: 2014_04_16_tormlb_minmlb_1\n",
-      "error with game: 2014_04_26_tbamlb_chamlb_1\n",
-      "error with game: 2014_04_27_detmlb_minmlb_1\n",
-      "error with game: 2014_04_29_pitmlb_balmlb_1\n",
-      "error with game: 2014_04_29_lanmlb_minmlb_1\n",
-      "error with game: 2014_04_30_nynmlb_phimlb_1\n",
-      "error with game: 2014_04_30_pitmlb_balmlb_1\n",
-      "error with game: 2014_04_30_seamlb_nyamlb_1\n",
-      "error with game: 2014_04_30_tbamlb_bosmlb_1\n",
-      "error with game: 2014_05_16_pitmlb_nyamlb_1\n",
-      "error with game: 2014_05_22_oakmlb_tbamlb_1\n",
-      "error with game: 2014_06_03_tormlb_detmlb_1\n",
-      "error with game: 2014_06_08_miamlb_chnmlb_1\n",
-      "error with game: 2014_06_19_tormlb_nyamlb_1\n",
-      "error with game: 2014_06_22_seamlb_kcamlb_1\n",
-      "error with game: 2014_07_04_balmlb_bosmlb_1\n",
-      "error with game: 2014_07_29_slnmlb_sdnmlb_1\n",
-      "error with game: 2014_07_30_tormlb_bosmlb_1\n",
-      "error with game: 2014_08_05_nynmlb_wasmlb_1\n",
-      "error with game: 2014_08_10_nynmlb_phimlb_1\n",
-      "error with game: 2014_08_12_nyamlb_balmlb_1\n",
-      "error with game: 2014_08_17_tormlb_chamlb_1\n",
-      "error with game: 2014_09_10_minmlb_clemlb_1\n",
-      "error with game: 2014_09_12_minmlb_chamlb_1\n",
-      "error with game: 2014_09_14_houmlb_anamlb_1\n"
+      "error with game: 2016_10_03_clemlb_detmlb_1\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "error with game: 2014_09_18_bosmlb_pitmlb_1\n",
-      "error with game: 2014_09_18_wasmlb_miamlb_1\n",
-      "error with game: 2014_10_03_kcamlb_anamlb_1\n",
-      "error with game: 2014_10_07_lanmlb_slnmlb_1\n",
-      "error with game: 2014_10_07_wasmlb_sfnmlb_1\n",
-      "error with game: 2014_10_11_kcamlb_balmlb_1\n",
-      "error with game: 2014_10_13_balmlb_kcamlb_1\n",
-      "error with game: 2014_10_22_sfnmlb_kcamlb_1\n",
-      "error with game: 2014_10_28_sfnmlb_kcamlb_1\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'pitch_data/pitches_2016.p'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-a6bc5fd35091>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0my\u001b[0m \u001b[0;32min\u001b[0m \u001b[0myears_wanted\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0mpitches_by_year\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_pitch_by_year\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-5-1fc8a2f955df>\u001b[0m in \u001b[0;36mload_pitch_by_year\u001b[0;34m(year)\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0mpitch_data_clean\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0ms\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0ms\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpitch_data\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0ms\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# Removes the empty atbats.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0mpitch_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpitch_data_clean\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m         \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mpitch_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mfname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"wb\"\u001b[0m \u001b[0;34m)\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mpitch_data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'pitch_data/pitches_2016.p'"
      ]
     }
    ],
@@ -424,14 +253,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "VECTOR_SIZE = 1 # Number of pitch types\n",
+    "VECTOR_SIZE = 13 # Number of pitch types\n",
     "\n",
     "pitch_char_dict = { \"A\":0,\n",
     "                    \"B\":1,\n",
@@ -459,9 +288,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'years_wanted' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-2f73b91b618f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Build the actual data set.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mfull_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0my\u001b[0m \u001b[0;32min\u001b[0m \u001b[0myears_wanted\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mfull_list\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mpitches_by_year\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'years_wanted' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Build the actual data set.\n",
     "full_list = []\n",
@@ -494,7 +335,9 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Pitch Prediction Network\n",
@@ -606,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
